<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="12dp"
    android:paddingBottom="12dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_address_tv"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/label_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_label" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/create_address"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_"
        app:strokeColor="@color/fabColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_address"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create_address"
        android:textAllCaps="false"
        android:textColor="@color/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/address_"
        app:strokeColor="@color/gold" />
</androidx.constraintlayout.widget.ConstraintLayout>
