<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wallet_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/wallet_card_margin"
            android:background="@drawable/card_backgrouund"
            app:layout_constraintCircleRadius="25dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_balance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_balance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                app:fontFamily="@font/roboto_regular"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pending_balanceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending_r_d_bal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:textSize="8sp"
                android:textColor="@color/white"
                app:fontFamily="@font/roboto_regular"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pending_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pending_balanceTv"
                app:layout_constraintStart_toStartOf="@id/pending_balanceTv"
                app:layout_constraintEnd_toEndOf="@id/pending_balanceTv"
                android:textColor="@color/green"
                android:text="0.000BTC"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="$32.026"
                app:layout_constraintTop_toBottomOf="@id/current_balance_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="30sp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="4.2433487BTC"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_baseline_add_24"
                app:tint="@color/white"
                android:backgroundTint="@color/fabColor"
                android:contentDescription="@string/app_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_send"
        android:backgroundTint="@color/white"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/top_container"
        app:layout_constraintEnd_toStartOf="@id/receive"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/receive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_receive"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/top_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/receive"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/send"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currency_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send"
        android:text="@string/currency"
        android:textSize="20sp"
        android:textColor="@color/currenct_textview_color"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/address_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>