<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"
        app:srcCompat="@drawable/ic_chart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="45dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Welcome!"
        app:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:layout_marginStart="45dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="45dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Sign up"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:layout_marginStart="45dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounden_corner">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-12dp">


            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:orientation="vertical">


                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    style="@style/MyHintStyle"
                    app:boxBackgroundColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:endIconMode="password_toggle"
                    style="@style/MyHintStyle"
                    app:boxBackgroundColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundColor="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/bottom_container"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_rounded_corner"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/goto_signin_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>